k8s/example/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: ollama-hologram-chatbot
   namespace: demos-main
   labels:
      app: nginx
spec:
   serviceName: "ollama-hologram-chatbot"
   replicas: 1
   selector:
      matchLabels:
         app: ollama-hologram-chatbot
   template:
      metadata:
         labels:
            app: ollama-hologram-chatbot
      spec:
         containers:
         -  name: ollama-hologram-chatbot-sa-container
            image: io2060/2060-service-agent:main
            imagePullPolicy: Always
            volumeMounts:
            - name: ollama-hologram-chatbot-sa-pv-main
              mountPath: /root/.afj
            ports:
            -  containerPort: 4000
            -  containerPort: 3001
         -  name: ollama-hologram-chatbot-backend-container
            image: io2060/ollama-hologram-chatbot:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2903
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: ollama-hologram-chatbot-pg-pv-main
              mountPath: /var/lib/postgresql/data
         -  name: ollama
            image: ollama/ollama 
            imagePullPolicy: Always
            ports:
            - containerPort: 11434
            lifecycle:
              postStart:
                exec:
                  command: ["/bin/sh", "-c", "for model in $PRELOAD_MODELS; do ollama run $model \"\"; done"]
            resources:
             requests:
                memory: "10Gi"
             limits:
                memory: "10Gi"
   volumeClaimTemplates: 
   - metadata:
       name: ollama-hologram-chatbot-sa-pv-main
     spec:
#       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: ollama-hologram-chatbot-pg-pv-main
     spec:
#       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: ollama-hologram-chatbot-data-store-main
     spec:
#       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
